# chunky

./: .gitignore  DEV_PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
docs/: FAQ.md  MacOS_App_Build_Plan.md
src/chunky/: __init__.py
src/chunky/chunking/: __init__.py  splitter.py
src/chunky/cli/: __init__.py  main.py
src/chunky/config/: __init__.py  settings.py
src/chunky/embedding/: embedder.py
src/chunky/llm/: labeler.py  test_labeler.py
src/chunky/parsers/: base.py  docx_parser.py  pdf_parser.py  pptx_parser.py  registry.py  text_parser.py
src/chunky/pipeline/: runner.py
src/chunky/progress/: __init__.py  manager.py
src/chunky/reranker/: __init__.py  reranker.py
src/chunky/search/: __init__.py  bm25_engine.py  hybrid_search.py  search_manager.py
src/chunky/topics/: modeler.py
src/chunky/utils/: connectivity.py  hf_setup.py  model_downloader.py  models.py  network.py
src/chunky/vectorstore/: __init__.py  chroma_store.py  milvus_store.py
test_docs/: test1.txt  test2.txt  test3.md  test4.txt  test5.txt
tests/unit/: test_chunking.py  test_cli.py  test_config.py  test_embedding.py  test_labeler.py  test_models.py  test_parsers.py  test_splitter.py  test_topics.py
